// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderClarityField renders a required field correctly 1`] = `
<fieldset
  className="form-group"
>
  <label
    className="required"
  >
    Test
  </label>
  <label
    className="tooltip tooltip-validation "
  >
    <input
      className="form-control"
      type="text"
    />
    <span
      className="tooltip-content"
    />
  </label>
</fieldset>
`;

exports[`renderClarityField renders a text field correctly 1`] = `
<fieldset
  className="form-group"
>
  <label
    className=""
  >
    Test
  </label>
  <label
    className="tooltip tooltip-validation "
  >
    <input
      className="form-control"
      type="text"
    />
    <span
      className="tooltip-content"
    />
  </label>
</fieldset>
`;

exports[`renderClarityField renders an invalid field correctly 1`] = `
<fieldset
  className="form-group"
>
  <label
    className="required"
  >
    Test
  </label>
  <label
    className="tooltip tooltip-validation invalid"
  >
    <input
      className="form-control"
      type="text"
    />
    <span
      className="tooltip-content"
    >
      bad field
    </span>
  </label>
</fieldset>
`;
